<?xml version="1.0" encoding="utf-8"?>

<!-- TODO: Update blank fragment layout -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="addViewModel"
                type="com.example.application_v2.addProduct.AddProductViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/text_gym"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="8dp"
                android:text="@string/logo"
                android:textAlignment="center"
                android:textSize="42sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.455"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <EditText
                android:id="@+id/input_name_product"
                android:layout_width="324dp"
                android:layout_height="58dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/nameProductInput"
                android:inputType="textPersonName"
                android:text="@={addViewModel.inputNameProduct}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_gym" />

        <Button
                android:id="@+id/button_cancel"
                android:layout_width="137dp"
                android:layout_height="53dp"
                android:layout_marginTop="8dp"
                android:text="@string/CancelBtn"
                app:layout_constraintEnd_toEndOf="@+id/input_type"
                app:layout_constraintTop_toBottomOf="@+id/input_type" />

        <Button
                android:id="@+id/button_confrim"
                android:layout_width="137dp"
                android:layout_height="53dp"
                android:layout_marginTop="8dp"
                android:onClick="@{() -> addViewModel.clickButton()}"
                android:text="@string/ConfrimBtn"
                app:layout_constraintStart_toStartOf="@+id/input_type"
                app:layout_constraintTop_toBottomOf="@+id/input_type" />

        <EditText
                android:id="@+id/input_type"
                android:layout_width="324dp"
                android:layout_height="58dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/typeInput"
                android:inputType="textPersonName"
                android:text="@={addViewModel.inputtype}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_id" />

        <EditText
                android:id="@+id/input_id"
                android:layout_width="324dp"
                android:layout_height="58dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/idInput"
                android:inputType="textPersonName"
                android:text="@={addViewModel.inputid}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_name_product" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

