<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <TextView
                android:id="@+id/textView_name_profile"
                android:layout_width="239dp"
                android:layout_height="24dp"
                android:layout_marginStart="88dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="88dp"
                android:text="@string/name"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
                android:id="@+id/textView_University"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/University"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/textView_name_profile"
                app:layout_constraintTop_toBottomOf="@+id/textView_name_profile" />

        <TextView
                android:id="@+id/textView_major"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/major"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/textView_name_profile"
                app:layout_constraintTop_toBottomOf="@+id/textView_University" />

        <TextView
                android:id="@+id/text_id_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/idCard"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/textView_name_profile"
                app:layout_constraintTop_toBottomOf="@+id/textView_major" />

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_marginTop="64dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/profile" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>